# Audio-Swiss-Army-knife

./: README.md  pyproject.toml  requirements.txt
src/audio_sak/conversion/: codecs_converter.py  convert_flac_to_wav.py  convert_m4a_to_wav.py  convert_mp3_to_wav.py  convert_ogg_to_wav.py  convert_sample_rate_with_librosa.py  convert_sample_rate_with_sox.py  convert_sample_rate_with_torchaudio.py  convert_stereo_to_mono.py  convert_wav_to_flac.py  convert_wav_to_mp3.py  speech_change.py
src/audio_sak/embeddings/: extract_clova_embeddings.py  extract_ge2e_embeddings.py  extract_hubert_embeddings.py  extract_nemo_embeddings.py  extract_resemblyzer_embeddings.py  extract_wav2vec_embeddings.py  extract_wavlm_embeddings.py  extract_whisper_embeddings.py
src/audio_sak/normalization/: normalize_audios_by_dbfs.py  normalize_audios_by_max_volume.py  normalize_audios_with_pydub.py  normalize_with_librosa.py  remove_silence_using_vad.py  remove_silence_with_librosa.py  remove_silence_with_pydub.py
src/audio_sak/others/: download_audio_from_youtube.py  download_video_from_youtube.py  run_deepfilternet.py  voice_detector.py
src/audio_sak/segmentation/: create_audio_segments_from_csv.py  create_segments.py  merge_files.py  segment_audio.py  segment_audio_same_duration.py
src/audio_sak/transcription/: transcribe_with_mms.py  transcribe_with_openai.py  transcribe_with_wav2vec.py  (+2 more)
test_output/conversion/: LJ001-0001.flac  LJ001-0002.flac  LJ001-0003.flac  LJ001-0004.flac  LJ001-0005.flac  LJ001-0006.flac
test_output/segmentation/: segments.csv
utils/: verify_tools.py
(+13 files in other folders)
